crates/tools/src/vet/snapshots/kcl_tools__vet__tests__test_expr_builder__build_with_json_no_schema_name-5.snap
---
source: crates/tools/src/vet/tests.rs
expression: got_ast_json_str
---
{
  "column": 0,
  "end_column": 1,
  "end_line": 13,
  "filename": "<workspace>/complex.k.json",
  "line": 1,
  "node": {
    "items": [
      {
        "column": 0,
        "end_column": 1,
        "end_line": 13,
        "filename": "<workspace>/complex.k.json",
        "line": 1,
        "node": {
          "key": {
            "column": 4,
            "end_column": 9,
            "end_line": 3,
            "filename": "<workspace>/complex.k.json",
            "line": 3,
            "node": {
              "is_long_string": false,
              "raw_value": "\"age\"",
              "type": "StringLit",
              "value": "age"
            }
          },
          "operation": "Union",
          "value": {
            "column": 11,
            "end_column": 13,
            "end_line": 3,
            "filename": "<workspace>/complex.k.json",
            "line": 3,
            "node": {
              "binary_suffix": null,
              "type": "NumberLit",
              "value": {
                "type": "Int",
                "value": 18
              }
            }
          }
        }
      },
      {
        "column": 0,
        "end_column": 1,
        "end_line": 13,
        "filename": "<workspace>/complex.k.json",
        "line": 1,
        "node": {
          "key": {
            "column": 4,
            "end_column": 10,
            "end_line": 5,
            "filename": "<workspace>/complex.k.json",
            "line": 5,
            "node": {
              "is_long_string": false,
              "raw_value": "\"data\"",
              "type": "StringLit",
              "value": "data"
            }
          },
          "operation": "Union",
          "value": {
            "column": 12,
            "end_column": 5,
            "end_line": 8,
            "filename": "<workspace>/complex.k.json",
            "line": 5,
            "node": {
              "items": [
                {
                  "column": 12,
                  "end_column": 5,
                  "end_line": 8,
                  "filename": "<workspace>/complex.k.json",
                  "line": 5,
                  "node": {
                    "key": {
                      "column": 8,
                      "end_column": 12,
                      "end_line": 6,
                      "filename": "<workspace>/complex.k.json",
                      "line": 6,
                      "node": {
                        "is_long_string": false,
                        "raw_value": "\"id\"",
                        "type": "StringLit",
                        "value": "id"
                      }
                    },
                    "operation": "Union",
                    "value": {
                      "column": 14,
                      "end_column": 15,
                      "end_line": 6,
                      "filename": "<workspace>/complex.k.json",
                      "line": 6,
                      "node": {
                        "binary_suffix": null,
                        "type": "NumberLit",
                        "value": {
                          "type": "Int",
                          "value": 1
                        }
                      }
                    }
                  }
                },
                {
                  "column": 12,
                  "end_column": 5,
                  "end_line": 8,
                  "filename": "<workspace>/complex.k.json",
                  "line": 5,
                  "node": {
                    "key": {
                      "column": 8,
                      "end_column": 15,
                      "end_line": 7,
                      "filename": "<workspace>/complex.k.json",
                      "line": 7,
                      "node": {
                        "is_long_string": false,
                        "raw_value": "\"value\"",
                        "type": "StringLit",
                        "value": "value"
                      }
                    },
                    "operation": "Union",
                    "value": {
                      "column": 17,
                      "end_column": 25,
                      "end_line": 7,
                      "filename": "<workspace>/complex.k.json",
                      "line": 7,
                      "node": {
                        "is_long_string": false,
                        "raw_value": "\"value1\"",
                        "type": "StringLit",
                        "value": "value1"
                      }
                    }
                  }
                }
              ],
              "type": "Config"
            }
          }
        }
      },
      {
        "column": 0,
        "end_column": 1,
        "end_line": 13,
        "filename": "<workspace>/complex.k.json",
        "line": 1,
        "node": {
          "key": {
            "column": 4,
            "end_column": 8,
            "end_line": 12,
            "filename": "<workspace>/complex.k.json",
            "line": 12,
            "node": {
              "is_long_string": false,
              "raw_value": "\"hc\"",
              "type": "StringLit",
              "value": "hc"
            }
          },
          "operation": "Union",
          "value": {
            "column": 10,
            "end_column": 19,
            "end_line": 12,
            "filename": "<workspace>/complex.k.json",
            "line": 12,
            "node": {
              "ctx": "Load",
              "elts": [
                {
                  "column": 11,
                  "end_column": 12,
                  "end_line": 12,
                  "filename": "<workspace>/complex.k.json",
                  "line": 12,
                  "node": {
                    "binary_suffix": null,
                    "type": "NumberLit",
                    "value": {
                      "type": "Int",
                      "value": 1
                    }
                  }
                },
                {
                  "column": 14,
                  "end_column": 15,
                  "end_line": 12,
                  "filename": "<workspace>/complex.k.json",
                  "line": 12,
                  "node": {
                    "binary_suffix": null,
                    "type": "NumberLit",
                    "value": {
                      "type": "Int",
                      "value": 2
                    }
                  }
                },
                {
                  "column": 17,
                  "end_column": 18,
                  "end_line": 12,
                  "filename": "<workspace>/complex.k.json",
                  "line": 12,
                  "node": {
                    "binary_suffix": null,
                    "type": "NumberLit",
                    "value": {
                      "type": "Int",
                      "value": 3
                    }
                  }
                }
              ],
              "type": "List"
            }
          }
        }
      },
      {
        "column": 0,
        "end_column": 1,
        "end_line": 13,
        "filename": "<workspace>/complex.k.json",
        "line": 1,
        "node": {
          "key": {
            "column": 4,
            "end_column": 12,
            "end_line": 9,
            "filename": "<workspace>/complex.k.json",
            "line": 9,
            "node": {
              "is_long_string": false,
              "raw_value": "\"labels\"",
              "type": "StringLit",
              "value": "labels"
            }
          },
          "operation": "Union",
          "value": {
            "column": 14,
            "end_column": 5,
            "end_line": 11,
            "filename": "<workspace>/complex.k.json",
            "line": 9,
            "node": {
              "items": [
                {
                  "column": 14,
                  "end_column": 5,
                  "end_line": 11,
                  "filename": "<workspace>/complex.k.json",
                  "line": 9,
                  "node": {
                    "key": {
                      "column": 8,
                      "end_column": 13,
                      "end_line": 10,
                      "filename": "<workspace>/complex.k.json",
                      "line": 10,
                      "node": {
                        "is_long_string": false,
                        "raw_value": "\"key\"",
                        "type": "StringLit",
                        "value": "key"
                      }
                    },
                    "operation": "Union",
                    "value": {
                      "column": 15,
                      "end_column": 22,
                      "end_line": 10,
                      "filename": "<workspace>/complex.k.json",
                      "line": 10,
                      "node": {
                        "is_long_string": false,
                        "raw_value": "\"value\"",
                        "type": "StringLit",
                        "value": "value"
                      }
                    }
                  }
                }
              ],
              "type": "Config"
            }
          }
        }
      },
      {
        "column": 0,
        "end_column": 1,
        "end_line": 13,
        "filename": "<workspace>/complex.k.json",
        "line": 1,
        "node": {
          "key": {
            "column": 4,
            "end_column": 13,
            "end_line": 4,
            "filename": "<workspace>/complex.k.json",
            "line": 4,
            "node": {
              "is_long_string": false,
              "raw_value": "\"message\"",
              "type": "StringLit",
              "value": "message"
            }
          },
          "operation": "Union",
          "value": {
            "column": 15,
            "end_column": 30,
            "end_line": 4,
            "filename": "<workspace>/complex.k.json",
            "line": 4,
            "node": {
              "is_long_string": false,
              "raw_value": "\"This is Alice\"",
              "type": "StringLit",
              "value": "This is Alice"
            }
          }
        }
      },
      {
        "column": 0,
        "end_column": 1,
        "end_line": 13,
        "filename": "<workspace>/complex.k.json",
        "line": 1,
        "node": {
          "key": {
            "column": 4,
            "end_column": 10,
            "end_line": 2,
            "filename": "<workspace>/complex.k.json",
            "line": 2,
            "node": {
              "is_long_string": false,
              "raw_value": "\"name\"",
              "type": "StringLit",
              "value": "name"
            }
          },
          "operation": "Union",
          "value": {
            "column": 12,
            "end_column": 19,
            "end_line": 2,
            "filename": "<workspace>/complex.k.json",
            "line": 2,
            "node": {
              "is_long_string": false,
              "raw_value": "\"Alice\"",
              "type": "StringLit",
              "value": "Alice"
            }
          }
        }
      }
    ],
    "type": "Config"
  }
}
