crates/tools/src/vet/snapshots/kcl_tools__vet__tests__test_expr_builder__build_with_yaml_no_schema_name-2.snap
---
source: crates/tools/src/vet/tests.rs
expression: got_ast_yaml_str
---
{"node":{"type":"Config","items":[{"node":{"key":{"node":{"type":"StringLit","is_long_string":false,"raw_value":"\"name\"","value":"name"},"filename":"<workspace>/simple.k.yaml","line":1,"column":0,"end_line":0,"end_column":0},"value":{"node":{"type":"StringLit","is_long_string":false,"raw_value":"\"Alice,\"","value":"Alice,"},"filename":"<workspace>/simple.k.yaml","line":1,"column":6,"end_line":0,"end_column":0},"operation":"Union"},"filename":"<workspace>/simple.k.yaml","line":1,"column":4,"end_line":0,"end_column":0},{"node":{"key":{"node":{"type":"StringLit","is_long_string":false,"raw_value":"\"age\"","value":"age"},"filename":"<workspace>/simple.k.yaml","line":2,"column":0,"end_line":0,"end_column":0},"value":{"node":{"type":"StringLit","is_long_string":false,"raw_value":"\"18,\"","value":"18,"},"filename":"<workspace>/simple.k.yaml","line":2,"column":5,"end_line":0,"end_column":0},"operation":"Union"},"filename":"<workspace>/simple.k.yaml","line":1,"column":4,"end_line":0,"end_column":0},{"node":{"key":{"node":{"type":"StringLit","is_long_string":false,"raw_value":"\"message\"","value":"message"},"filename":"<workspace>/simple.k.yaml","line":3,"column":0,"end_line":0,"end_column":0},"value":{"node":{"type":"StringLit","is_long_string":false,"raw_value":"\"This is Alice\"","value":"This is Alice"},"filename":"<workspace>/simple.k.yaml","line":3,"column":9,"end_line":0,"end_column":0},"operation":"Union"},"filename":"<workspace>/simple.k.yaml","line":1,"column":4,"end_line":0,"end_column":0}]},"filename":"<workspace>/simple.k.yaml","line":1,"column":4,"end_line":0,"end_column":0}
