crates/tools/src/vet/snapshots/kcl_tools__vet__tests__test_expr_builder__build_with_yaml_no_schema_name-5.snap
---
source: crates/tools/src/vet/tests.rs
expression: got_ast_yaml_str
---
{"node":{"type":"Config","items":[{"node":{"key":{"node":{"type":"StringLit","is_long_string":false,"raw_value":"\"name\"","value":"name"},"filename":"<workspace>/complex.k.yaml","line":1,"column":0,"end_line":0,"end_column":0},"value":{"node":{"type":"StringLit","is_long_string":false,"raw_value":"\"Alice\"","value":"Alice"},"filename":"<workspace>/complex.k.yaml","line":1,"column":6,"end_line":0,"end_column":0},"operation":"Union"},"filename":"<workspace>/complex.k.yaml","line":1,"column":4,"end_line":0,"end_column":0},{"node":{"key":{"node":{"type":"StringLit","is_long_string":false,"raw_value":"\"age\"","value":"age"},"filename":"<workspace>/complex.k.yaml","line":2,"column":0,"end_line":0,"end_column":0},"value":{"node":{"type":"NumberLit","binary_suffix":null,"value":{"type":"Int","value":18}},"filename":"<workspace>/complex.k.yaml","line":2,"column":5,"end_line":0,"end_column":0},"operation":"Union"},"filename":"<workspace>/complex.k.yaml","line":1,"column":4,"end_line":0,"end_column":0},{"node":{"key":{"node":{"type":"StringLit","is_long_string":false,"raw_value":"\"message\"","value":"message"},"filename":"<workspace>/complex.k.yaml","line":3,"column":0,"end_line":0,"end_column":0},"value":{"node":{"type":"StringLit","is_long_string":false,"raw_value":"\"This is Alice\"","value":"This is Alice"},"filename":"<workspace>/complex.k.yaml","line":3,"column":9,"end_line":0,"end_column":0},"operation":"Union"},"filename":"<workspace>/complex.k.yaml","line":1,"column":4,"end_line":0,"end_column":0},{"node":{"key":{"node":{"type":"StringLit","is_long_string":false,"raw_value":"\"data\"","value":"data"},"filename":"<workspace>/complex.k.yaml","line":4,"column":0,"end_line":0,"end_column":0},"value":{"node":{"type":"Config","items":[{"node":{"key":{"node":{"type":"StringLit","is_long_string":false,"raw_value":"\"id\"","value":"id"},"filename":"<workspace>/complex.k.yaml","line":5,"column":4,"end_line":0,"end_column":0},"value":{"node":{"type":"NumberLit","binary_suffix":null,"value":{"type":"Int","value":1}},"filename":"<workspace>/complex.k.yaml","line":5,"column":8,"end_line":0,"end_column":0},"operation":"Union"},"filename":"<workspace>/complex.k.yaml","line":5,"column":6,"end_line":0,"end_column":0},{"node":{"key":{"node":{"type":"StringLit","is_long_string":false,"raw_value":"\"value\"","value":"value"},"filename":"<workspace>/complex.k.yaml","line":6,"column":4,"end_line":0,"end_column":0},"value":{"node":{"type":"StringLit","is_long_string":false,"raw_value":"\"value1\"","value":"value1"},"filename":"<workspace>/complex.k.yaml","line":6,"column":11,"end_line":0,"end_column":0},"operation":"Union"},"filename":"<workspace>/complex.k.yaml","line":5,"column":6,"end_line":0,"end_column":0}]},"filename":"<workspace>/complex.k.yaml","line":5,"column":6,"end_line":0,"end_column":0},"operation":"Union"},"filename":"<workspace>/complex.k.yaml","line":1,"column":4,"end_line":0,"end_column":0},{"node":{"key":{"node":{"type":"StringLit","is_long_string":false,"raw_value":"\"labels\"","value":"labels"},"filename":"<workspace>/complex.k.yaml","line":7,"column":0,"end_line":0,"end_column":0},"value":{"node":{"type":"Config","items":[{"node":{"key":{"node":{"type":"StringLit","is_long_string":false,"raw_value":"\"key\"","value":"key"},"filename":"<workspace>/complex.k.yaml","line":8,"column":4,"end_line":0,"end_column":0},"value":{"node":{"type":"StringLit","is_long_string":false,"raw_value":"\"value\"","value":"value"},"filename":"<workspace>/complex.k.yaml","line":8,"column":9,"end_line":0,"end_column":0},"operation":"Union"},"filename":"<workspace>/complex.k.yaml","line":8,"column":7,"end_line":0,"end_column":0}]},"filename":"<workspace>/complex.k.yaml","line":8,"column":7,"end_line":0,"end_column":0},"operation":"Union"},"filename":"<workspace>/complex.k.yaml","line":1,"column":4,"end_line":0,"end_column":0},{"node":{"key":{"node":{"type":"StringLit","is_long_string":false,"raw_value":"\"hc\"","value":"hc"},"filename":"<workspace>/complex.k.yaml","line":9,"column":0,"end_line":0,"end_column":0},"value":{"node":{"type":"List","elts":[{"node":{"type":"NumberLit","binary_suffix":null,"value":{"type":"Int","value":1}},"filename":"<workspace>/complex.k.yaml","line":10,"column":6,"end_line":0,"end_column":0},{"node":{"type":"NumberLit","binary_suffix":null,"value":{"type":"Int","value":2}},"filename":"<workspace>/complex.k.yaml","line":11,"column":6,"end_line":0,"end_column":0},{"node":{"type":"NumberLit","binary_suffix":null,"value":{"type":"Int","value":3}},"filename":"<workspace>/complex.k.yaml","line":12,"column":6,"end_line":0,"end_column":0}],"ctx":"Load"},"filename":"<workspace>/complex.k.yaml","line":10,"column":4,"end_line":0,"end_column":0},"operation":"Union"},"filename":"<workspace>/complex.k.yaml","line":1,"column":4,"end_line":0,"end_column":0}]},"filename":"<workspace>/complex.k.yaml","line":1,"column":4,"end_line":0,"end_column":0}
