crates/tools/src/vet/snapshots/kcl_tools__vet__tests__test_expr_builder__build_with_yaml_no_schema_name-6.snap
---
source: crates/tools/src/vet/tests.rs
expression: got_ast_yaml_str
---
{"node":{"type":"Config","items":[{"node":{"key":{"node":{"type":"StringLit","is_long_string":false,"raw_value":"\"null_val\"","value":"null_val"},"filename":"<workspace>/only_with_null.yaml","line":1,"column":0,"end_line":0,"end_column":0},"value":{"node":{"type":"NameConstantLit","value":"None"},"filename":"<workspace>/only_with_null.yaml","line":1,"column":10,"end_line":0,"end_column":0},"operation":"Union"},"filename":"<workspace>/only_with_null.yaml","line":1,"column":8,"end_line":0,"end_column":0}]},"filename":"<workspace>/only_with_null.yaml","line":1,"column":8,"end_line":0,"end_column":0}
