crates/tools/src/vet/snapshots/kcl_tools__vet__tests__test_expr_builder__build_with_yaml_no_schema_name-8.snap
---
source: crates/tools/src/vet/tests.rs
expression: got_ast_yaml_str
---
{"node":{"type":"Config","items":[{"node":{"key":{"node":{"type":"StringLit","is_long_string":false,"raw_value":"\"float_val\"","value":"float_val"},"filename":"<workspace>/only_with_float.yaml","line":1,"column":0,"end_line":0,"end_column":0},"value":{"node":{"type":"NumberLit","binary_suffix":null,"value":{"type":"Float","value":0.33}},"filename":"<workspace>/only_with_float.yaml","line":1,"column":11,"end_line":0,"end_column":0},"operation":"Union"},"filename":"<workspace>/only_with_float.yaml","line":1,"column":9,"end_line":0,"end_column":0}]},"filename":"<workspace>/only_with_float.yaml","line":1,"column":9,"end_line":0,"end_column":0}
